[gd_scene format=3 uid="uid://c4vskwh5utqrh"]

[ext_resource type="Texture2D" uid="uid://mhoiqu7d4h1a" path="res://assets/pongBackground.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bj8hbvwaaqo52" path="res://scripts/main.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://cpx6sktkocywc" path="res://scripts/player.gd" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://c230l5eaoguuc" path="res://scripts/ball.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://dvfc2galyimhh" path="res://scripts/cpu.gd" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://dh5wibjmnq7pv" path="res://assets/newGameButton.png" id="6_85g3d"]
[ext_resource type="Script" uid="uid://c84bqn4sv18n5" path="res://scripts/new_game_button.gd" id="7_choun"]
[ext_resource type="Texture2D" uid="uid://bd1j2kwxv0esl" path="res://assets/exitGameButton.png" id="8_ya4ey"]
[ext_resource type="Script" uid="uid://gfawre37besm" path="res://scripts/exit_game_button.gd" id="9_eb6dy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5qli"]
size = Vector2(1152, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(1152, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(16, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(16, 648)

[node name="Main" type="Sprite2D" unique_id=1487922807]
texture_filter = 1
texture = ExtResource("1_o5qli")
centered = false
script = ExtResource("2_sugp2")

[node name="Player" type="StaticBody2D" parent="." unique_id=459940707]
position = Vector2(50, 324)
collision_mask = 2
script = ExtResource("3_jyhfs")

[node name="ColorRect" type="ColorRect" parent="Player" unique_id=738976979]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" unique_id=529222884]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="CPU" type="StaticBody2D" parent="." unique_id=733917772]
position = Vector2(1082, 324)
script = ExtResource("4_tbgi4")

[node name="ColorRect" type="ColorRect" parent="CPU" unique_id=1375630971]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU" unique_id=345114366]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="Ball" type="CharacterBody2D" parent="." unique_id=475859100]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_jyhfs")

[node name="ColorRect" type="ColorRect" parent="Ball" unique_id=521577933]
offset_right = 10.0
offset_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball" unique_id=22897270]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Borders" type="StaticBody2D" parent="." unique_id=1105052386]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders" unique_id=1731737667]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_o5qli")

[node name="Bottom" type="CollisionShape2D" parent="Borders" unique_id=969867540]
position = Vector2(576, 656)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="ScoreLeft" type="Area2D" parent="." unique_id=1602590238]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft" unique_id=988332768]
position = Vector2(-8, 324)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="ScoreRight" type="Area2D" parent="." unique_id=1080615369]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight" unique_id=337837224]
position = Vector2(1160, 324)
shape = SubResource("RectangleShape2D_tefeu")

[node name="HUD" type="CanvasLayer" parent="." unique_id=907759818]

[node name="PlayerScore" type="Label" parent="HUD" unique_id=1652654597]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="HUD" unique_id=955728244]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="." unique_id=1543557571]
one_shot = true
autostart = true

[node name="TestBody" type="StaticBody2D" parent="." unique_id=1719528677]
visible = false

[node name="ColorRect" type="ColorRect" parent="TestBody" unique_id=131957641]
offset_left = 463.0
offset_top = -8.0
offset_right = 613.0
offset_bottom = 2.0

[node name="GameOver" type="CanvasLayer" parent="." unique_id=174238614]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver" unique_id=10644668]
offset_left = 121.0
offset_top = 72.0
offset_right = 1028.0
offset_bottom = 444.0
color = Color(0.0013967262, 0.0013967262, 0.001396726, 1)

[node name="GameOverScreen" type="Label" parent="GameOver" unique_id=173120349]
visibility_layer = 2
z_index = 1
offset_left = 384.0
offset_top = 86.0
offset_right = 750.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="WinnerMessage" type="Label" parent="GameOver" unique_id=2012239183]
visibility_layer = 2
offset_left = 384.0
offset_top = 226.0
offset_right = 424.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 64

[node name="NewGameButton" type="Button" parent="GameOver" unique_id=713825565]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -10.0
offset_right = -59.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
icon = ExtResource("6_85g3d")
flat = true
icon_alignment = 1
script = ExtResource("7_choun")

[node name="ExitGameButton" type="Button" parent="GameOver" unique_id=963184759]
offset_left = 648.0
offset_top = 314.0
offset_right = 743.0
offset_bottom = 362.0
text = "Exit Game"
icon = ExtResource("8_ya4ey")
icon_alignment = 1
script = ExtResource("9_eb6dy")

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="pressed" from="GameOver/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="GameOver/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
